# python-sdk

./: CHANGELOG.md  CLI_DOCUMENTATION.md  CONTRIBUTING.md  MANIFEST.in  README.md  TESTING_SUMMARY.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
ainative/: __init__.py  cli.py  client.py
ainative/agent_swarm/: __init__.py
ainative/zerodb/: __init__.py
examples/: agent_swarm.py  basic_usage.py  vector_search.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_agent_swarm.py  test_auth.py  test_client.py  test_exceptions.py  test_zerodb_analytics.py  test_zerodb_memory.py  test_zerodb_projects.py  test_zerodb_vectors.py
